[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"

[[bin]]
name = "asm"
path = "src/asm.rs"

[[bin]]
name = "deasm"
path = "src/deasm.rs"

[[bin]]
name = "chip8"
path = "src/main.rs"
